# Kairos

./: .bumpversion.cfg  .gitignore  DONATE.md  LICENSE.md  PRODUCTION.md  README.md  _kairos.cfg  build_public.bat  clean_up.bat  cython.py  main.py  process.bat  requirements.txt  setup.cfg  setup.py  version.txt
.eggs/setuptools_scm-3.1.0-py3.7.egg/EGG-INFO/: PKG-INFO  RECORD
.eggs/setuptools_scm-3.1.0-py3.7.egg/setuptools_scm/: __init__.py  config.py
.github/ISSUE_TEMPLATE/: document-improvement-proposal.md  migration_report.md  say-hi-.md
.github/workflows/: codeql-analysis.yml
Kairos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
json/: _entry.json  _parent.json
kairos/: __init__.py  debug.py  mongodb.py  timing.py  tools.py
tv/: __init__.py  _alert.yaml  _browse.yaml  _example.yaml  _example_davo.yaml  _screener_to_watchlist.yaml  _signal.yaml  _summary.yaml  branch.yaml  browse.yaml  mail.py  refresh.yaml  tv.py
yaml/: _alert.yaml  _alert_davo.yaml  _alert_multiple.yaml  _browse.yaml  _davo.yaml  _export.yaml  _screener.yaml  _signal.yaml  _signal_golden_cross.yaml  _strategies.yaml  _summary.yaml  branch_in_branch.yaml  refresh.yaml  root.yaml
