[metadata]
name = Kairos
version = 2.96
author = timelyart
author_email= timelyart@protonmail.com
url = https://github.com/timelyart/Kairos
license = GPL-3; End-User License Agreement: https://www.eulatemplate.com/live.php?token=zduUYsiBp0PFzzX0UANHUodYVMifuNRp
description = Kairos aims to help you save time by automating repetitive tasks on TradingView such as refreshing alerts and creating new ones.
long_description = file: README.md, LICENSE.md, PRODUCTION.md, DONATE.md

[options]
packages = find:
python_requires = >=3.10
install_requires =
    setuptools
    pyyaml
    beautifulsoup4
    selenium
    configparser
    pip
    Pillow
    requests
    gspread
    google-api-python-client
    oauth2client
    pymongo
    dill
    numpy
    fastnumbers
    psutil
    Cython
    tqdm
    soupsieve
    coloredlogs
    selenium-stealth
    pyvirtualdisplay;platform_system=='Linux'
    pyobjc-core;platform_system=='Darwin'
    pyobjc;platform_system=='Darwin'